--- a/App.config
+++ b/App.config
@@ -10,16 +10,13 @@
     </startup>
     <userSettings>
         <NDSDecompilationProjectMaker.Properties.Settings>
-            <setting name="outputPath" serializeAs="String">
+            <setting name="path_in" serializeAs="String">
                 <value />
             </setting>
-            <setting name="inputPath" serializeAs="String">
+            <setting name="path_symbols" serializeAs="String">
                 <value />
             </setting>
-            <setting name="romPath" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="symbolsPath" serializeAs="String">
+            <setting name="path_out" serializeAs="String">
                 <value />
             </setting>
         </NDSDecompilationProjectMaker.Properties.Settings>
