The decompressor didn't like whitespaces in the file path: Moved it in C:\tmp.

--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="path_out" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="path_temp" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">C:\tmp</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
